styles/header.css
@layer base {
	:root {
		--bar-width: 60px;
		--bar-height: 8px;
		--hamburger-gap: .5rem;
		--header-padding: 1rem;
		--hamburger-menu-animation-timing: 200ms ease-in-out;
		--hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
	}
}

@layer layouts {
	.header {
		display: flex;
		max-width: 1500px;
		margin-inline: auto;
		padding: var(--header-padding);
		justify-content: space-between;
		align-items: center;
	}

	.header-buttons {
		display: flex;
		gap: 1.5rem;
		align-items: center;

		@media (width <=820px) {
			display: none;
		}
	}

	.header-nav {
		display: contents;
		color: var(--dark-grey);
	}

	.sidebar {
		position: absolute;
		font-size: inherit;
		padding-top: 5.5rem;
		right: 0;
		top: 0;
		background-color: var(--black);
		color: var(--white);
		min-height: 100vh;
		padding-inline: 1rem;

		translate: 101%;
		transition: translate var(--hamburger-menu-animation-timing);
		transition-behavior: allow-discrete;

		@media (width >=820px) {
			display: none;
		}
	}

	.hamburger-menu:has(input:checked)+.sidebar {
		translate: 0;
	}

}

@layer components {

	.brand-logo {
		display: flex;
		gap: .5rem;
		align-items: center;
		font-size: 1.5rem;
		font-weight: 600;
		color: var(--secondary-color);

		svg {
			height: 1rem;
		}
	}

	.hamburger-menu {
		--x-width: calc(var(--hamburger-height) * 1.41421356237);

		display: flex;
		flex-direction: column;
		gap: var(--hamburger-gap);
		z-index: 100;
		cursor: pointer;

		@media (width >=820px) {
			display: none;
		}
	}

	.hamburger-menu::before,
	.hamburger-menu::after,
	.hamburger-menu input {
		display: block;
		content: "";
		width: var(--bar-width);
		height: var(--bar-height);
		background-color: var(--black);
		border-radius: 9999px;
		transition:
			opacity var(--hamburger-menu-animation-timing),
			width var(--hamburger-menu-animation-timing),
			rotate var(--hamburger-menu-animation-timing),
			translate var(--hamburger-menu-animation-timing),
			background-color var(--hamburger-menu-animation-timing);
		transform-origin: left center;
	}

	.hamburger-menu input {
		appearance: none;
		padding: 0;
		margin: 0;
		outline: none;
		pointer-events: none;
	}

	.hamburger-menu input:checked {
		opacity: 0;
		width: 0;
	}

	.hamburger-menu:has(input:checked)::before {
		rotate: 45deg;
		width: var(--x-width);
		translate: 0 calc(var(--bar-height) / -2);
	}

	.hamburger-menu:has(input:checked)::after {
		rotate: -45deg;
		width: var(--x-width);
		translate: 0 calc(var(--bar-height) / 2);
	}

	.hamburger-menu:has(input:checked) {
		&::after {
			background-color: var(--white);
		}

		&::before {
			background-color: var(--white);
		}
	}
}

